tests/files/flow_controller_tests/should_fail/037.cmdr
x = true;
print ceil(x);